--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,96 @@
-ansi2html==1.9.1
-beautifulsoup4==4.12.2
-blinker==1.7.0
-certifi==2023.11.17
-charset-normalizer==3.3.2
-click==8.1.7
-dash==2.14.2
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-docopt==0.6.2
-Flask==3.0.0
-idna==3.6
-importlib-metadata==7.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-nest-asyncio==1.5.8
-numpy==1.26.2
-packaging==23.2
-pandas==2.1.4
-patsy==0.5.4
-pipreqs==0.4.13
-plotly==5.18.0
-plotly-express==0.4.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-requests==2.31.0
-retrying==1.3.4
-scipy==1.11.4
-six==1.16.0
-soupsieve==2.5
-statsmodels==0.14.1
-tenacity==8.2.3
-typing_extensions==4.9.0
-tzdata==2023.3
-Unidecode==1.3.7
-urllib3==2.1.0
-Werkzeug==3.0.1
-yarg==0.1.9
-zipp==3.17.0
+AppKit==0.2.8
+asgiref==3.7.2
+attr==0.3.2
+black==23.12.1
+boto3==1.34.11
+botocore==1.34.11
+brotli==1.1.0
+brotlicffi==1.1.0.0
+cchardet==2.1.7
+celery==5.3.6
+coloredlogs==15.0.1
+ConfigParser==6.0.0
+contextlib2==21.6.0
+cryptography==41.0.7
+cvxopt==1.3.2
+cycler==0.12.1
+Cython==3.0.7
+dash_testing_stub==0.0.2
+dask==2023.12.1
+diskcache==5.6.3
+dl==0.1.0
+docutils==0.20.1
+fastparquet==2023.10.1
+fire==0.5.0
+flask_compress==1.14
+Foundation==0.1.0a0.dev1
+fsspec==2023.12.2
+html5lib==1.1
+HTMLParser==0.0.2
+hypothesis==6.92.2
+ipykernel==6.28.0
+ipython==8.19.0
+ipywidgets==8.1.1
+jnius==1.1.0
+joblib==1.3.2
+keyring==24.3.0
+lockfile==0.12.2
+lxml==5.0.0
+matplotlib==3.8.2
+mock==5.1.0
+mpmath==1.3.0
+mtrand==0.1
+multiprocess==0.70.15
+mypy==1.8.0
+nitime==0.10.2
+numarray==1.5.1
+numdifftools==0.9.41
+Numeric==24.2
+numexpr==2.8.8
+odfpy==1.4.1
+openpyxl==3.1.2
+orjson==3.9.10
+percy==2.0.2
+pickle5==0.0.12
+Pillow==10.1.0
+pooch==1.8.0
+protobuf==4.25.1
+psutil==5.9.7
+py==1.11.0
+PyInstaller==6.3.0
+pyOpenSSL==23.3.0
+PyQt4==4.11.4
+PyQt5==5.15.10
+pytest_timeout==2.2.0
+python-dotenv==1.0.0
+pyxlsb==1.0.10
+PyYAML==6.0.1
+qtpy==2.4.1
+railroad==0.5.0
+rpy2==3.5.15
+s3fs==2023.12.2
+scikit_learn==1.3.2
+scikits.talkbox==0.2.5
+selenium==4.16.0
+sets==0.3.2
+simplejson==3.19.2
+skimage==0.0
+Sphinx==7.2.6
+SQLAlchemy==2.0.24
+sympy==1.12
+tables==3.9.2
+thread==0.1.3
+threadpoolctl==3.2.0
+tornado==6.4
+traitlets==5.14.0
+trove_classifiers==2023.11.29
+truststore==0.8.0
+urllib3_secure_extra==0.1.0
+vincent==0.4.4
+watchdog==3.0.0
+xarray==2023.12.0
+xlrd==2.0.1
+xlsxwriter==3.1.9
+xmlrpclib==1.0.1
+yapf==0.40.2
+zstandard==0.22.0
