--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dash-html-components==2.0.0
 dash-table==5.0.0
 docopt==0.6.2
 Flask==3.0.0
+gunicorn==20.1.0
 idna==3.6
 importlib-metadata==7.0.0
 itsdangerous==2.1.2
